# LogLens-CLI

./: .gitignore  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  README.md  architecture.md  install.sh  pyproject.toml
docs/: cli-reference.md  getting-started.md  skills.md
docs/blogs/: fullLifecycle.md
skills/: app_logs.toml  generic.toml  nginx_access.toml  nginx_error.toml  python_app.toml  systemd.toml
src/loglens/: __init__.py  _patch_prompt.py  agent.py  cli.py  config.py  id_map.py  memory.py  parser.py  schema.py  skills.py
tests/: __init__.py  test_cli.py  test_memory.py  test_parser.py  test_schema.py
